# hhuTOS

./: README.md
Aufgabe2/aufgabenstellung2/: aufgabe2.md
BS-Dev Teil 1/Aufgabe1/aufgabenstellung/: aufgabe1.md
BS-Dev Teil 1/Aufgabe2/aufgabenstellung2/: MEM-slides.pptx
BS-Dev Teil 1/Aufgabe3/aufgabenstellung/: aufgabe3.md
BS-Dev Teil 1/Aufgabe5/: aufgabe5.md
BS-Dev Teil 2/Aufgabe2/: Aufgabe02.pdf:Zone.Identifier
code/: Cargo.toml  Makefile.toml
code/src/: consts.rs  startup.rs
code/src/boot/: boot.asm
code/src/devices/: cga.rs  cga_print.rs  key.rs  keyboard.rs  kprint.rs  mod.rs  pcspk.rs  pit.rs  vga.rs
code/src/kernel/: allocator.rs  cpu.rs  mod.rs  stack.rs
code/src/kernel/allocator/: bump.rs  list.rs
code/src/kernel/corouts/: coroutine.asm  coroutine.rs  mod.rs
code/src/kernel/interrupts/: intdispatcher.rs  interrupts.asm  isr.rs  mod.rs  pic.rs
code/src/kernel/threads/: idle_thread.rs  mod.rs  scheduler.rs  thread.asm  thread.rs
code/src/mylib/: delay.rs  input.rs  mod.rs  mutex.rs  queue.rs  spinlock.rs
code/src/user/: mod.rs
code/src/user/aufgabe1/: keyboard_demo.rs  text_demo.rs
code/src/user/aufgabe2/: heap_demo.rs  sound_demo.rs
code/src/user/aufgabe3/: keyboard_irq_demo.rs
code/src/user/aufgabe4/: coop_thread_demo.rs  coop_thread_loop.rs  corouts_demo.rs  hello_world_thread.rs
code/src/user/aufgabe5/: coop_thread_demo.rs  coop_thread_loop.rs  mod.rs  preem_thread_demo.rs
code/src/user/aufgabe6/: mod.rs  semaphore_demo.rs
code/src/user/aufgabe7/: game_of_life.rs  graphic_demo.rs  mod.rs
(+3 files in other folders)
